<resources>
    <string name="app_name">WhatsBestApp</string>

    <!--Bottom Navigation View -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="group">Groups</string>
    <string name="watch">Watch</string>
    <string name="profile">Profile</string>

    <!-- Home Tab View -->
    <string name="posts">Posts</string>
    <string name="activity">Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
